--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<style>
+		*{
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
+		}
+		body{
+			height: 100vh;
+			padding: 40px;
+		}
 		.btn {
 			padding: 15px;
 			font-size: 30px;
